# model/response/role.go
@@ -1,0 +1,7 @@
+package response
+
+import "github.com/Dlimingliang/go-admin/model"
+
+type RoleResult struct {
+	Authority model.Role `json:"authority"`
+}
